2006-04-24  Ulrich Drepper  <drepper@redhat.com>

	* posix/tst-rfc3484.c (do_test): Also initialize source_addr_flags
	field.
	* posix/tst-rfc3484-2.c (do_test): Likewise.

	* posix/tst-rfc3484.c: Include <ifaddrs.h> early.
	* posix/tst-rfc3484-2.c: Likewise.

	* version.h (VERSION): Bunp to 2.4.90 for the trunk.

2006-04-24  Jakub Jelinek  <jakub@redhat.com>

	* malloc/arena.c (ptmalloc_init): Don't call __malloc_check_init
	if MALLOC_CHECK_ env var contains an empty string.

2006-04-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (getaddrinfo): Always initialize in6ai.

2006-04-24  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sync_file_range.c (sync_file_range): Use
	__LONG_LONG_PAIR macro.

	* posix/bits/unistd.h (__readlinkat_chk): New prototype.
	(__readlinkat_alias): New alias.
	(readlinkat): New inline function.
	* include/unistd.h (readlinkat): Add libc_hidden_proto.
	* sysdeps/unix/sysv/linux/readlinkat.c (readlinkat): Add
	libc_hidden_def.
	* io/readlinkat.c (readlinkat): Likewise.
	* debug/readlinkat_chk.c: New file.
	* debug/Makefile (routines): Add readlinkat_chk.
	* debug/Versions (libc): Export __readlinkat_chk@@GLIBC_2.5.
	* debug/tst-chk1.c (do_test): Add readlinkat tests.

2006-04-23  Ulrich Drepper  <drepper@redhat.com>

	* nis/nss_nisplus/nisplus-netgrp.c: Cleanups.

	[BZ #1951]
	* sysdeps/posix/sigset.c (sigset): Return correct value reflecting
	previous signal state.
	* signal/Makefile (tests): Add tst-sigset2.
	* signal/tst-sigset2.c: New file.

2006-04-21  Jakub Jelinek  <jakub@redhat.com>

	* argp/argp.h (__option_is_short): Check upper limit of
	__key.  isprint() requires its argument to have the value
	of an unsigned char or EOF.
	Patch by Sergey Poznyakoff <gray@Mirddin.farlep.net>.

2006-04-21  Ulrich Drepper  <drepper@redhat.com>

	[BZ #2534, BZ #2535]
	* posix/regex.h: Remove obsolete <sys/types.h> comment and special
	handling for VMS.

	* iconvdata/ibm437.c: Define HAS_HOLES to 0.